Added Item decoration and done some other changes

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="margin">20dp</dimen>
     <dimen name="text_size">20sp</dimen>
     <dimen name="padding">10dp</dimen>
+    <dimen name="size">15sp</dimen>
 </resources>
